force-app/main/default/objects/NProperty__c/NProperty__c.object-meta.xml
<CustomObject>
    <label>物件</label>
    <nameField>
        <label>現場名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>