force-app/main/default/objects/NProperty__c/fields/Constructioncompany__c.field-meta.xml
<CustomField>
    <fullName>Constructioncompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>建設会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>物件</relationshipLabel>
    <relationshipName>Constructioncompany</relationshipName>
    <type>Lookup</type>
</CustomField>