force-app/main/default/objects/NProperty__c/fields/ConstructionStage__c.field-meta.xml
<CustomField>
    <fullName>ConstructionStage__c</fullName>
    <label>段階</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>構想</fullName>
            </value>
            <value>
                <fullName>基本設計</fullName>
            </value>
            <value>
                <fullName>実施設計</fullName>
            </value>
            <value>
                <fullName>設計完了</fullName>
            </value>
            <value>
                <fullName>入札</fullName>
                <isActive>false</isActive>
                <label>入札</label>
            </value>
            <value>
                <fullName>設計前</fullName>
                <isActive>false</isActive>
                <label>設計前</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>