force-app/main/default/objects/NProperty__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>工事店</label>
    <type>TextArea</type>
</CustomField>