force-app/main/default/objects/NProperty__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <label>設計</label>
    <length>255</length>
    <type>Text</type>
</CustomField>