force-app/main/default/objects/NProperty__c/fields/OverallCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>OverallCompletionDate__c</fullName>
    <label>全体竣工日</label>
    <type>Date</type>
</CustomField>