force-app/main/default/objects/NProperty__c/fields/OverallCompletionDateText__c.field-meta.xml
<CustomField>
    <fullName>OverallCompletionDateText__c</fullName>
    <label>全体竣工日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>