force-app/main/default/objects/NProperty__c/fields/OverallConstructionStartDate__c.field-meta.xml
<CustomField>
    <fullName>OverallConstructionStartDate__c</fullName>
    <label>全体着工日</label>
    <type>Date</type>
</CustomField>