force-app/main/default/objects/NProperty__c/fields/OverallConstructionStartDateText__c.field-meta.xml
<CustomField>
    <fullName>OverallConstructionStartDateText__c</fullName>
    <label>全体着工日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>