force-app/main/default/objects/NProperty__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>入手元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>