force-app/main/default/objects/NProperty__c/fields/TotalFloorArea__c.field-meta.xml
<CustomField>
    <fullName>TotalFloorArea__c</fullName>
    <label>延床面積</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>